--- a/Kreator/AndroidManifest.xml
+++ b/Kreator/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.diyapp.kreator"
+    android:sharedUserId="com.diyapp.kreator2" 
+    package="com.diyapp.kreator2"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -13,7 +14,7 @@
 
         android:label="@string/app_name">
         <activity
-            android:name=".Diy"
+            android:name="com.diyapp.kreator.Diy"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,7 +22,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".DiyEdit"></activity>
+        <activity android:name="com.diyapp.kreator.DiyEdit"></activity>
     </application>
 
 </manifest>
