db button for fake

--- a/fakeDIYa/AndroidManifest.xml
+++ b/fakeDIYa/AndroidManifest.xml
@@ -39,6 +39,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.example.fakediya.ListDiys"></activity>
     </application>
 
 </manifest>
