--- a/Kreator/AndroidManifest.xml
+++ b/Kreator/AndroidManifest.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    android:sharedUserId="com.diyapp.kreator2" 
-    package="com.diyapp.kreator2"
+<manifest package="com.diyapp.kreator2"
+    android:sharedUserId="com.diyapp.kreator2"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="1.0" xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-sdk
         android:minSdkVersion="10"
@@ -11,8 +10,7 @@
 
     <application
         android:allowBackup="true"
-
-        android:label="@string/app_name">
+        android:label="@string/app_name" >
         <activity
             android:name="com.diyapp.kreator.Diy"
             android:label="@string/app_name" >
@@ -22,7 +20,22 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.diyapp.kreator.DiyEdit"></activity>
+        
+        
+        <activity android:name="com.diyapp.kreator.DiyEdit" >
+        </activity>
+
+
+        <activity android:name="com.diyapp.kreator.AndroidTabAndListView" />
+
+
+        <activity android:name="com.diyapp.kreator.InboxActivity" />
+
+
+        <activity android:name="com.diyapp.kreator.OutboxActivity" />
+
+
+        <activity android:name="com.diyapp.kreator.ProfileActivity" />
     </application>
 
 </manifest>
