--- a/Kreator/AndroidManifest.xml
+++ b/Kreator/AndroidManifest.xml
@@ -9,6 +9,33 @@
         android:minSdkVersion="10"
         android:targetSdkVersion="17" />
 
+    <permission
+        android:name="com.diyapp.kreator2.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature" />
+
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
+    <uses-feature
+        android:name="android.hardware.location"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.location.network"
+        android:required="false" />
+    <uses-feature android:name="android.hardware.location.gps" />
+    <uses-feature
+        android:name="android.hardware.wifi"
+        android:required="false" />
+
+    <uses-permission android:name="com.diyapp.kreator2.permission.MAPS_RECEIVE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:label="@string/app_name" >
@@ -35,6 +62,16 @@
             android:name="com.diyapp.kreator.DiyEditActionsActivity"
             android:label="@string/title_activity_diy_edit_actions" >
         </activity>
+
+
+        <activity
+            android:name="com.diyapp.kreator.DiyMapActivity"
+            android:label="@string/title_activity_diy_map" >
+        </activity>
+        <meta-data
+        android:name="com.google.android.maps.v2.API_KEY"
+        android:value="AIzaSyDklCL1cdWj9KOtZAOC23GxzOogip4zUto" />
+        
     </application>
 
 </manifest>
