--- a/fakeDIYa/AndroidManifest.xml
+++ b/fakeDIYa/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    android:sharedUserId="com.diyapp.kreator2" 
-    package="com.example.fakediya2"
+    package="com.example.fakediya"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -18,14 +17,7 @@
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
     <uses-permission android:name="android.permission.VIBRATE" />
 
-    <application>
-
-        <receiver android:name="com.example.fakediya.TestReceiver" >
-            <intent-filter>
-                <action android:name="com.diyapp.kreator.UPDATE" >
-                </action>
-            </intent-filter>
-        </receiver>
+    <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -39,7 +31,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.example.fakediya.ListDiys"></activity>
+        <activity
+            android:name="com.example.fakediya.TriggersTest"
+            android:label="@string/title_activity_triggers_test" >
+        </activity>
+        <activity
+            android:name="com.example.fakediya.ActionsTest"
+            android:label="@string/title_activity_actions_test" >
+        </activity>
     </application>
 
 </manifest>
