--- a/fakeDIYa/AndroidManifest.xml
+++ b/fakeDIYa/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.fakediya"
+    package="com.example.fakediya3"
+    android:sharedUserId="com.diyapp.kreator2"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -17,13 +18,19 @@
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
     <uses-permission android:name="android.permission.VIBRATE" />
 
-    <application
+    <application>
+        <receiver android:name="com.example.fakediya3.TestReceiver" >
+            <intent-filter>
+                <action android:name="com.diyapp.kreator.UPDATE" >
+                </action>
+            </intent-filter>
+        </receiver>
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme" >
         <activity
-            android:name="com.example.fakediya.FakeDIYa"
+            android:name="com.example.fakediya3.FakeDIYa"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -32,12 +39,16 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.example.fakediya.TriggersTest"
-            android:label="@string/title_activity_triggers_test" >
+            android:name="com.example.fakediya3.ActionsTest"
+            android:label="@string/title_activity_actions_test" >
         </activity>
         <activity
-            android:name="com.example.fakediya.ActionsTest"
+            android:name="com.example.fakediya3.ListDiys"
             android:label="@string/title_activity_actions_test" >
+        </activity>
+        <activity
+            android:name="com.example.fakediya3.ShowDiyActivity"
+            android:label="@string/title_activity_show_diy" >
         </activity>
     </application>
 
