Added limit slider width

--- a/Kreator/project.properties
+++ b/Kreator/project.properties
@@ -12,5 +12,5 @@
 
 # Project target.
 target=android-17
-android.library.reference.1=../diyapplib
-android.library.reference.2=../google-play-services_lib
+android.library.reference.1=../../../../../projzesp2012-BS/diyapplib
+android.library.reference.2=../../../../../projzesp2012-BS/google-play-services_lib
