--- a/Kreator/project.properties
+++ b/Kreator/project.properties
@@ -11,6 +11,6 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-17
-android.library.reference.1=../../../../../projzesp2012-BS/diyapplib
-android.library.reference.2=../../../../../projzesp2012-BS/google-play-services_lib
+target=Google Inc.:Google APIs:17
+android.library.reference.1=../diyapplib
+android.library.reference.2=../google-play-services_lib
